--- a/smart-table-module/partials/smartTable.html
+++ b/smart-table-module/partials/smartTable.html
@@ -5,8 +5,8 @@
         </td>
     </tr>
     <tr class="smart-table-header-row">
-        <th ng-repeat="column in columns" ng-include="column.headerTemplateUrl"
-            class="smart-table-header-cell {{column.headerClass}}" scope="col">
+        <th ng-repeat="column in columns" class="smart-table-header-cell {{column.headerClass}}" scope="col">
+            <ng-include src="column.headerTemplateUrl"></ng-include>
         </th>
     </tr>
     </thead>
