Add support for html in pagination button text with $sce. Add ellipsies to pagination when there are more pages than shown. Add current page number below pagination buttons. Hide pager buttons when there is less than 2 pages.

--- a/smart-table-module/partials/pagination.html
+++ b/smart-table-module/partials/pagination.html
@@ -1,3 +1,11 @@
-<ul class="pagination">
-  <li ng-repeat="page in pages" ng-class="{active: page.active, disabled: page.disabled}"><a ng-click="selectPage(page.number)">{{page.text}}</a></li>
-</ul>
+<div ng-show="numPages > 1">
+    <ul class="pagination">
+        <li ng-repeat="page in pages"
+            ng-class="{active: page.active, disabled: page.disabled}">
+            <a ng-click="selectPage(page.number)" ng-bind-html="page.text"></a>
+        </li>
+    </ul>
+    <p class="pagination-details">
+        Page {{ currentPage }} of {{ numPages }}
+    </p>
+</div>
